--- a/animperium/Assembly-CSharp.csproj
+++ b/animperium/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Camera\CameraFocus.cs" />
+     <Compile Include="Assets\Scripts\CameraMoveOnRightclick.cs" />
      <Compile Include="Assets\Scripts\Data.cs" />
      <Compile Include="Assets\Scripts\EntryPoint.cs" />
      <Compile Include="Assets\Scripts\FightHack.cs" />
@@ -59,6 +60,7 @@
      <Compile Include="Assets\Scripts\Pathfinding\PathFinding.cs" />
      <Compile Include="Assets\Scripts\Pathfinding\PathNode.cs" />
      <Compile Include="Assets\Scripts\Pathfinding\PathfindingTest.cs" />
+     <Compile Include="Assets\Scripts\SelectedUnitGridTeleporter.cs" />
      <Compile Include="Assets\Scripts\SelectedUnitMover.cs" />
      <Compile Include="Assets\Scripts\SelectionManager.cs" />
      <Compile Include="Assets\Scripts\SpawnHack.cs" />
