--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\CameraMoveOnRightclick.cs" />
     <Compile Include="Assets\Scripts\Data.cs" />
     <Compile Include="Assets\Scripts\EntryPoint.cs" />
+    <Compile Include="Assets\Scripts\FightHack.cs" />
     <Compile Include="Assets\Scripts\GameEvent.cs" />
     <Compile Include="Assets\Scripts\GameObjectAction.cs" />
     <Compile Include="Assets\Scripts\GameObjectFilter.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Assets\Scripts\SelectedUnitGridTeleporter.cs" />
     <Compile Include="Assets\Scripts\SelectedUnitMover.cs" />
     <Compile Include="Assets\Scripts\SelectionManager.cs" />
+    <Compile Include="Assets\Scripts\SpawnHack.cs" />
     <Compile Include="Assets\Scripts\TeleportMovement.cs" />
     <Compile Include="Assets\Scripts\TileInfo.cs" />
     <Compile Include="Assets\Scripts\TurnManager.cs" />
