--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -89,10 +89,6 @@
     <Compile Include="Assets\Scripts\Pathfinding\PathFinding.cs" />
     <Compile Include="Assets\Scripts\Pathfinding\PathNode.cs" />
     <Compile Include="Assets\Scripts\TurnManager.cs" />
-    <Compile Include="Assets\Scripts\UI\ContextMenuInteraction.cs" />
-    <Compile Include="Assets\Scripts\UI\ContextMenuSpawn.cs" />
-    <Compile Include="Assets\Scripts\UI\GUIData.cs" />
-    <Compile Include="Assets\Scripts\UI\SetOnGui.cs" />
     <Compile Include="Assets\Scripts\Unit\Movement\PathMovement.cs" />
     <Compile Include="Assets\Scripts\Unit\Movement\PathMovementManager.cs" />
     <Compile Include="Assets\Scripts\Unit\Movement\TeleportMovement.cs" />
@@ -102,6 +98,13 @@
     <Compile Include="Assets\Scripts\Unit\UnitActionQueue.cs" />
     <Compile Include="Assets\Scripts\Util\GameEvent.cs" />
     <Compile Include="Assets\Scripts\Util\Vec2i.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\ContextMenuInteraction.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\ContextMenuSpawn.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\DisplayRound.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\EndTurn.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\GUIData.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\SetOnGui.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\TurnBarBlinking.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
