--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -111,7 +111,6 @@
     <Compile Include="Assets\Scripts\Util\Vec2i.cs" />
     <Compile Include="Assets\UI\UI-Scripts\AttackButton.cs" />
     <Compile Include="Assets\UI\UI-Scripts\BreakButton.cs" />
-    <Compile Include="Assets\UI\UI-Scripts\ContextMenuArrange.cs" />
     <Compile Include="Assets\UI\UI-Scripts\ContextMenuInteraction.cs" />
     <Compile Include="Assets\UI\UI-Scripts\ContextMenuPosition.cs" />
     <Compile Include="Assets\UI\UI-Scripts\ContextMenuSpawn.cs" />
@@ -127,6 +126,7 @@
     <Compile Include="Assets\UI\UI-Scripts\SetOnGui.cs" />
     <Compile Include="Assets\UI\UI-Scripts\TurnBarBlinking.cs" />
     <Compile Include="Assets\UI\UI-Scripts\UISoundManager.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\old scripts don&apos;t use\ContextMenuArrange.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Map\UCLAGameLab\Wireframe\Shaders\UCLA GameLab Cutout Wireframe.shader" />
