--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -58,12 +58,6 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -100,8 +94,8 @@
     <Compile Include="Assets\Scripts\Pathfinding\PathNode.cs" />
     <Compile Include="Assets\Scripts\SoundManager.cs" />
     <Compile Include="Assets\Scripts\TurnManager.cs" />
-    <Compile Include="Assets\Scripts\Unit\Abilities\MeleeAttackAbility.cs" />
     <Compile Include="Assets\Scripts\Unit\Abilities\MovementAbility.cs" />
+    <Compile Include="Assets\Scripts\Unit\Abilities\SingleTargetAttackAbility.cs" />
     <Compile Include="Assets\Scripts\Unit\AbilityManager.cs" />
     <Compile Include="Assets\Scripts\Unit\BuildingFootprintCircle.cs" />
     <Compile Include="Assets\Scripts\Unit\DefaultUnit.cs" />
