--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -128,8 +128,8 @@
     <Compile Include="Assets\UI\UI-Scripts\New UI\UISpawn.cs" />
     <Compile Include="Assets\UI\UI-Scripts\PlayerTimer.cs" />
     <Compile Include="Assets\UI\UI-Scripts\RotateOnCreate.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\SetDescriptionStats.cs" />
     <Compile Include="Assets\UI\UI-Scripts\SetOnGui.cs" />
-    <Compile Include="Assets\UI\UI-Scripts\SetStatusValues.cs" />
     <Compile Include="Assets\UI\UI-Scripts\ShowNameText.cs" />
     <Compile Include="Assets\UI\UI-Scripts\SpawnButton.cs" />
     <Compile Include="Assets\UI\UI-Scripts\UISoundManager.cs" />
